# fallout-project

./: README.md
firmware/: Cargo.toml  Embed.toml
firmware/.cargo/: config.toml
firmware/src/: buttons.rs  display.rs  game.rs  main.rs  state.rs  state_cell.rs  sweet_spot.rs
wiring-diagram/: wiring-diagram.kicad_sch
