[package]
name = "firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
# Embassy
embassy-executor = { version = "0.10" }
embassy-sync = { version = "0.8" }
embassy-time = { version = "0.5" }
embassy-net = { version = "0.9", features = ["dhcpv4", "dns", "tcp", "udp"] }

# Embedded
embedded-hal-bus = { version="0.2", features=["async"]}

# ESP specifics
esp-hal = { version = "1", features = ["esp32c3", "unstable", "rt", "exception-handler", "log-04"] }
esp-backtrace = { version = "0.19", features = ["esp32c3", "panic-handler", "println"] }
esp-println = { version = "0.17", features = ["esp32c3", "log-04", "auto", "colors", "critical-section"] }
esp-radio = { version = "0.18", features = ["esp32c3", "wifi", "esp-alloc", "log-04"] }
esp-rtos = { version = "0.3", features = ["esp32c3", "esp-radio", "embassy"] }
esp-alloc = { version = "0.10" }
esp-bootloader-esp-idf = { version = "0.5", features = ["esp32c3"] }

# Static objects
static_cell = { version = "2" }

# Heapless data types
heapless = { version = "0.9" }

# Time
time = { version = "0.3", default-features = false }

# Random
rand_core = { version="0.10", default-features = false }

# log
log = { version = "0.4" }

# Display
mipidsi = { version = "0.10" }
embedded-graphics = { version = "0.8.2" }
tinyqoi = "0.2.0"

critical-section = "1"

# ESP GPIO bit-banging is timing-sensitive. Unoptimized dev builds can hold
# HX711 SCK high long enough to power the chip down mid-read, producing bogus
# saturated values like 8388607.
[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
